Update new FX layout