@@ -3,15 +3,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
-    <artifactId>javafx-jfoenix-testfx</artifactId>
+    <groupId>app</groupId>
+    <artifactId>library-manager</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>15</maven.compiler.source>
-        <maven.compiler.target>15</maven.compiler.target>
-        <javafx.version>15.0.1</javafx.version>
-        <jfoenix.version>9.0.10</jfoenix.version>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
+        <javafx.version>23.0.1</javafx.version>
+        <materialfx.version>11.13.5</materialfx.version>
         <font-awesome.version>4.7.0-9.1.2</font-awesome.version>
         <testfx.version>4.0.16-alpha</testfx.version>
         <junit.version>5.9.3</junit.version>
@@ -35,11 +35,11 @@
             <version>${javafx.version}</version>
         </dependency>
 
-		<!-- JFoenix -->
+		<!-- MaterialFX -->
         <dependency>
-            <groupId>com.jfoenix</groupId>x
-            <artifactId>jfoenix</artifactId>
-            <version>${jfoenix.version}</version>
+            <groupId>org.glavo.materialfx</groupId>
+            <artifactId>materialfx</artifactId>
+            <version>${materialfx.version}</version>
         </dependency>
 
         <!-- FontAwesome -->
@@ -91,25 +91,9 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>YourMainClass</mainClass>
+                    <mainClass>app.App</mainClass>
                 </configuration>
             </plugin>
-
-	        <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M5</version>
-				<configuration>
-					<argLine>
-						--add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-						--add-opens javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED
-						--add-opens javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED
-						--add-opens javafx.base/com.sun.javafx.runtime=ALL-UNNAMED
-						--add-opens javafx.graphics/com.sun.javafx.application.ParametersImpl=ALL-UNNAMED
-					</argLine>
-				</configuration>
-	        </plugin>
 	    </plugins>
 	</build>
-
 </project>
